Unify getRecipientsOfInterest for applications and sicknotes